@@ -655,10 +655,13 @@ For all other values of RSEL, do nothing and return nil."
                         (format "%c%d"
                                 (+ ?A (- (if (> ?i col) col (1+ col)) ?a))
                                 (- size (- (aref cc 1) ?a)))))
+         (as-pos-maybe (x) (if (string= "resign" x)
+                               x
+                             (as-pos x)))
          (next (byp) (when (setq node (caar mem)
                                  mprop (or (assq :B node)
                                            (assq :W node)))
-                       (setq move (as-pos (cdr mprop))
+                       (setq move (as-pos-maybe (cdr mprop))
                              mem (cdr mem))
                        (push (if byp
                                  (format "%s%s" move (car mprop))
